eks-cluster-ec2/k8s-files/ingress/ingress/sample-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v2
spec:
  selector:
    matchLabels:
      app: hello-v2
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-v2
    spec:
      containers:
      - name: hellov2
        image: "gcr.io/google-samples/hello-app:2.0"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-v2-svc
  labels: 
    app: hello-v2
spec:
  selector:
    app: hello-v2
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
---
apiVersion: apps/v1
kind:  Deployment
metadata:
<<<<<<< HEAD
  name: hello-V1
=======
  name: hello-v1
>>>>>>> bfa8fc177e20f02aecec0094803f32d04854e08a
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
<<<<<<< HEAD
        - name: nginx
=======
        - name: hellov1
>>>>>>> bfa8fc177e20f02aecec0094803f32d04854e08a
          image: gcr.io/google-samples/hello-app:1.0
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
<<<<<<< HEAD
  name: hello-V2-svc
=======
  name: hello-v1-svc
>>>>>>> bfa8fc177e20f02aecec0094803f32d04854e08a
  labels: 
    app: hello
spec:
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
<<<<<<< HEAD
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
=======
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
>>>>>>> bfa8fc177e20f02aecec0094803f32d04854e08a
spec:
  rules:
    - http:
        paths:
        - path: /hello-v1
          pathType: Prefix
          backend:
            service:
<<<<<<< HEAD
              name: hello-V1-svc
=======
              name: hello-v1-svc
>>>>>>> bfa8fc177e20f02aecec0094803f32d04854e08a
              port:
                number: 8080
        - path: /hello-v2
          pathType: Prefix
          backend:
            service:
              name: hello-v2-svc
              port:
                number: 8080
